// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createContainerEntity properties transferred 1`] = `
{
  "_class": [
    "Container",
  ],
  "_key": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev/providers/Microsoft.ContainerInstance/containerGroups/j1dev-container-group/containers/nginx",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "command": [],
        "environmentVariables": [],
        "image": "nginx",
        "name": "nginx",
        "ports": [
          {
            "port": 80,
            "protocol": "TCP",
          },
        ],
        "resources": {
          "requests": {
            "cpu": 0.5,
            "memoryInGB": 1.5,
          },
        },
      },
    },
  ],
  "_type": "azure_container",
  "createdOn": undefined,
  "displayName": "nginx",
  "id": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev/providers/Microsoft.ContainerInstance/containerGroups/j1dev-container-group/containers/nginx",
  "image": "nginx",
  "name": "nginx",
}
`;

exports[`createContainerGroupEntity properties transferred 1`] = `
{
  "_class": [
    "Group",
  ],
  "_key": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev/providers/Microsoft.ContainerInstance/containerGroups/j1dev-container-group",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "containers": [
          {
            "command": [],
            "environmentVariables": [],
            "image": "nginx",
            "name": "nginx",
            "ports": [
              {
                "port": 80,
                "protocol": "TCP",
              },
            ],
            "resources": {
              "requests": {
                "cpu": 0.5,
                "memoryInGB": 1.5,
              },
            },
          },
          {
            "command": [],
            "environmentVariables": [],
            "image": "microsoft/aci-helloworld:latest",
            "name": "hello-world",
            "ports": [
              {
                "port": 443,
                "protocol": "TCP",
              },
            ],
            "resources": {
              "requests": {
                "cpu": 0.5,
                "memoryInGB": 1.5,
              },
            },
          },
        ],
        "id": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev/providers/Microsoft.ContainerInstance/containerGroups/j1dev-container-group",
        "initContainers": [],
        "ipAddress": {
          "dnsNameLabel": "j1dev-container-group-dns",
          "fqdn": "j1dev-container-group-dns.eastus.azurecontainer.io",
          "ip": "52.186.103.187",
          "ports": [
            {
              "port": 80,
              "protocol": "TCP",
            },
            {
              "port": 443,
              "protocol": "TCP",
            },
          ],
          "type": "Public",
        },
        "location": "eastus",
        "name": "j1dev-container-group",
        "osType": "Linux",
        "provisioningState": "Succeeded",
        "restartPolicy": "Always",
        "sku": "Standard",
        "tags": {},
        "type": "Microsoft.ContainerInstance/containerGroups",
      },
    },
  ],
  "_type": "azure_container_group",
  "createdOn": undefined,
  "displayName": "j1dev-container-group",
  "id": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev/providers/Microsoft.ContainerInstance/containerGroups/j1dev-container-group",
  "location": "eastus",
  "name": "j1dev-container-group",
  "osType": "Linux",
  "provisioningState": "Succeeded",
  "restartPolicy": "Always",
  "sku": "Standard",
  "type": "Microsoft.ContainerInstance/containerGroups",
  "webLink": "https://portal.azure.com/#@something.onmicrosoft.com/resource/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev/providers/Microsoft.ContainerInstance/containerGroups/j1dev-container-group",
}
`;

exports[`createVolumeEntity properties transferred 1`] = `
{
  "_class": [
    "Disk",
  ],
  "_key": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev/providers/Microsoft.ContainerInstance/containerGroups/j1dev-container-group/volumes/nginx-mount",
  "_rawData": [
    {
      "name": "default",
      "rawData": {
        "azureFile": {
          "readOnly": false,
          "shareName": "j1dev",
          "storageAccountName": "keionnedj1dev",
        },
        "name": "nginx-mount",
      },
    },
  ],
  "_type": "azure_container_volume",
  "classification": null,
  "createdOn": undefined,
  "displayName": "nginx-mount",
  "encrypted": null,
  "id": "/subscriptions/40474ebe-55a2-4071-8fa8-b610acdd8e56/resourceGroups/j1dev/providers/Microsoft.ContainerInstance/containerGroups/j1dev-container-group/volumes/nginx-mount",
  "name": "nginx-mount",
}
`;
